# Righteous_Warrior

./: .gitignore  CMakeLists.txt
src/: main.cpp
